syntax = "proto3";

import "google/protobuf/empty.proto";
import "GameDataService/Models/entities.proto";
import "GameDataService/Models/Common/search_params.proto";
import "GameDataService/Models/Common/convert_params.proto";

option csharp_namespace = "PlayerBuilds.Gen";

service PlayerBuildsService {
    rpc Get(GetPlayerBuildRequest) returns (GetPlayerBuildResponse);
}

message GetPlayerBuildRequest {
    string id = 1;
}

message GetPlayerBuildResponse {
    Hero hero = 1;
    repeated Unit units = 2;
}